[gd_scene load_steps=6 format=2]

[ext_resource path="res://demo/list_demo_shader/shiny/demo.gd" type="Script" id=1]
[ext_resource path="res://demo/objects/back_ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/objects/char_viewport.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot_sprite_shader/utils_shader/SSShiny.gd" type="Script" id=4]
[ext_resource path="res://addons/godot_sprite_shader/utils_shader/base/SShaderContainer.gd" type="Script" id=5]

[node name="demo" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" parent="." instance=ExtResource( 2 )]

[node name="Char" parent="." instance=ExtResource( 3 )]
position = Vector2( 137, 417 )

[node name="Char2" parent="." instance=ExtResource( 3 )]
position = Vector2( 316, 418 )
title = "Static Shiny"

[node name="Label" parent="Char2" index="0"]
text = "Shiny Static"

[node name="SShaderContainer" type="Node" parent="Char2"]
script = ExtResource( 5 )
node_path = NodePath("../ViewportContainer")

[node name="SSShinyFx" type="Node" parent="Char2/SShaderContainer"]
script = ExtResource( 4 )
process_value = 0.5

[node name="Char3" parent="." instance=ExtResource( 3 )]
position = Vector2( 518, 421 )
title = "Shiny To Left"

[node name="Label" parent="Char3" index="0"]
text = "Shiny To Left"

[node name="SShaderContainer" type="Node" parent="Char3"]
script = ExtResource( 5 )
node_path = NodePath("../ViewportContainer")

[node name="SSShinyFx" type="Node" parent="Char3/SShaderContainer"]
script = ExtResource( 4 )

[node name="Char4" parent="." instance=ExtResource( 3 )]
position = Vector2( 695, 420 )
title = "Shiny To Right"

[node name="Label" parent="Char4" index="0"]
text = "Shiny To Right"

[node name="SShaderContainer" type="Node" parent="Char4"]
script = ExtResource( 5 )
node_path = NodePath("../ViewportContainer")

[node name="SSShinyFx" type="Node" parent="Char4/SShaderContainer"]
script = ExtResource( 4 )

[node name="Char5" parent="." instance=ExtResource( 3 )]
position = Vector2( 876, 419 )
title = "Shiny Swing"

[node name="Label" parent="Char5" index="0"]
text = "Shiny Swing"

[node name="SShaderContainer" type="Node" parent="Char5"]
script = ExtResource( 5 )
node_path = NodePath("../ViewportContainer")

[node name="SSShinyFx" type="Node" parent="Char5/SShaderContainer"]
script = ExtResource( 4 )

[editable path="Char2"]
[editable path="Char3"]
[editable path="Char4"]
[editable path="Char5"]
